fix: improve iOS scroll smoothness (touch-action, overflow-scrolling)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,6 +34,12 @@ body {
   font-size: 16px !important;
   line-height: 1.8 !important;
   -webkit-font-smoothing: antialiased;
+  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
+}
+
+a, button {
+  touch-action: manipulation;
 }
 
 .wrapper {
